--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 *::before {
   box-sizing: border-box;
 }
-*::after:hover {
+*::after {
   box-sizing: border-box;
   text-decoration: underline;
 }
@@ -19,10 +19,11 @@ header {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  justify-content: space-around;
   align-items: center;
   position: fixed;
   border-bottom: 1px solid #e7e9fc;
+  gap: 40px;
+  justify-content: space-between;
 }
 .container {
   max-width: 1158px;
@@ -48,7 +49,7 @@ header {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  justify-content: space-evenly;
+  gap: 40px;
 }
 .menu .menu-ul .menu-item {
   list-style-type: none;
@@ -56,6 +57,8 @@ header {
 .menu .menu-ul .menu-item .link {
   color: #2e2f42;
   text-decoration: none;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .menu .menu-ul .menu-item .link:hover {
   color: #404bbf;
@@ -63,26 +66,24 @@ header {
 .menu .menu-ul .menu-item .links {
   color: #2e2f42;
   text-decoration: none;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .menu .menu-ul .menu-item .links:hover {
   color: #404bbf;
 }
 .menu .menu-ul .menu-item .links:active {
   color: #404bbf;
-  text-decoration: underline;
-}
-.adres {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: end;
 }
 .adres .adres-ul .adres-item {
   list-style-type: none;
+  float: left;
 }
 .adres .adres-ul .adres-item .adres-a {
   color: #434455;
   font-size: 16px;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .adres .adres-ul .adres-item .adres-a:hover {
   color: #404bbf;
@@ -98,6 +99,9 @@ button {
   cursor: pointer;
   display: block;
   margin: auto;
+  visibility: hidden;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 button:hover {
   background-color: #404bbf;
@@ -190,6 +194,8 @@ button:hover {
   align-items: center;
   position: relative;
   overflow: hidden;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .overlay {
   padding: 40px;
@@ -201,11 +207,9 @@ button:hover {
   width: 360px;
   height: 300px;
   transform: translateY(140%);
-  transition: transform 250ms ease-in-out;
 }
 .card-2:hover .overlay {
   transform: translateY(0);
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .card-image-2 {
   object-fit: cover;
@@ -255,6 +259,7 @@ h1 {
   width: 514px;
   height: 140px;
   text-align: center;
+  visibility: hidden;
 }
 h3 {
   padding: 0;
@@ -268,11 +273,46 @@ ul {
   padding: 0;
   margin: 0;
 }
-ul .icon-list {
-  list-style-type: none;
+.social-links {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  padding-top: 10px;
   gap: 24px;
+  flex-shrink: 0;
+  align-self: flex-end;
+  padding-top: 10px;
+}
+.social-links .link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+}
+.footer .icon-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  gap: 24px;
+  flex-shrink: 0;
+  align-self: flex-end;
+  padding-top: 10px;
+}
+.footer-social .icon-list .link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-social .icon-list .link:hover,
+.icon-list:focus {
+  background-color: #31d0aa;
 }
