--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,7 @@ header {
   border-bottom: 1px solid #e7e9fc;
   gap: 40px;
   justify-content: space-between;
+  z-index: 1;
 }
 .container {
   max-width: 1158px;
